external-crates/move/crates/move-compiler/tests/move_check/naming/named_blocks_invalid.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/named_blocks_invalid.move:3:9
  │
3 │         'name: {
  │         ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
  ┌─ tests/move_check/naming/named_blocks_invalid.move:4:31
  │
4 │             if (cond) { break 'name 10 };
  │                               ^^^^^ Unexpected character (')

error[E01001]: invalid character
  ┌─ tests/move_check/naming/named_blocks_invalid.move:5:34
  │
5 │             if (cond) { continue 'name };
  │                                  ^^^^^ Unexpected character (')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:11:14
   │
11 │         loop 'name: {
   │              ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:12:32
   │
12 │             if (cond) { return 'name 10 };
   │                                ^^^^^ Unexpected character (')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:17:14
   │
17 │         loop 'outer: {
   │              ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:18:18
   │
18 │             loop 'inner: {
   │                  ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:19:36
   │
19 │                 if (cond) { return 'outer 10 };
   │                                    ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:20:36
   │
20 │                 if (cond) { return 'inner 20 };
   │                                    ^^^^^^ Unexpected character (')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:26:22
   │
26 │         while (cond) 'outer: {
   │                      ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:27:26
   │
27 │             while (cond) 'inner: {
   │                          ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:28:36
   │
28 │                 if (cond) { return 'outer };
   │                                    ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:29:36
   │
29 │                 if (cond) { return 'inner };
   │                                    ^^^^^^ Unexpected character (')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:35:22
   │
35 │         while (cond) 'outer: {
   │                      ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:36:22
   │
36 │             let _x = 'inner: {
   │                      ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:37:36
   │
37 │                 if (cond) { return 'outer };
   │                                    ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:38:35
   │
38 │                 if (cond) { break 'inner 10 };
   │                                   ^^^^^^ Unexpected character (')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:45:14
   │
45 │         loop 'l: {
   │              ^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:46:18
   │
46 │             loop 'l: {
   │                  ^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:47:24
   │
47 │                 return 'l
   │                        ^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/naming/named_blocks_invalid.move:52:12
   │
52 │     fun t6(cond: bool): u64 {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:53:9
   │
53 │         'name: {
   │         ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E04007]: incompatible types
   ┌─ tests/move_check/naming/named_blocks_invalid.move:53:14
   │
52 │     fun t6(cond: bool): u64 {
   │                         --- Expected: 'u64'
53 │         'name: {
   │              ^
   │              │
   │              Invalid return expression
   │              Given: '()'

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:54:32
   │
54 │             if (cond) { return 'name2 10 };
   │                                ^^^^^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/naming/named_blocks_invalid.move:59:12
   │
59 │     fun t7(cond: bool): u64 {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:60:14
   │
60 │         loop 'name: {
   │              ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E04007]: incompatible types
   ┌─ tests/move_check/naming/named_blocks_invalid.move:60:19
   │
59 │     fun t7(cond: bool): u64 {
   │                         --- Expected: 'u64'
60 │         loop 'name: {
   │                   ^
   │                   │
   │                   Invalid return expression
   │                   Given: '()'

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:61:34
   │
61 │             if (cond) { continue 'name2 };
   │                                  ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:62:31
   │
62 │             if (cond) { break 'name2 10 };
   │                               ^^^^^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/naming/named_blocks_invalid.move:66:12
   │
66 │     fun t8(cond: bool): u64 {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:67:14
   │
67 │         loop 'outer2: {
   │              ^^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E04007]: incompatible types
   ┌─ tests/move_check/naming/named_blocks_invalid.move:67:21
   │
66 │     fun t8(cond: bool): u64 {
   │                         --- Expected: 'u64'
67 │         loop 'outer2: {
   │                     ^
   │                     │
   │                     Invalid return expression
   │                     Given: '()'

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:68:18
   │
68 │             loop 'inner2: {
   │                  ^^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:69:35
   │
69 │                 if (cond) { break 'outer 10 };
   │                                   ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:70:35
   │
70 │                 if (cond) { break 'inner 20 };
   │                                   ^^^^^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/naming/named_blocks_invalid.move:75:12
   │
75 │     fun t9(cond: bool) {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:76:22
   │
76 │         while (cond) 'outer: {
   │                      ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:77:26
   │
77 │             while (cond) 'inner: {
   │                          ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:78:38
   │
78 │                 if (cond) { continue 'outer2 };
   │                                      ^^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:79:35
   │
79 │                 if (cond) { break 'inner2 };
   │                                   ^^^^^^^ Unexpected character (')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:85:14
   │
85 │         loop 'l: {
   │              ^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/naming/named_blocks_invalid.move:86:18
   │
86 │             loop 'l: {
   │                  ^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/naming/named_blocks_invalid.move:87:23
   │
87 │                 break 'l2
   │                       ^^^ Unexpected character (')

